--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Historical Transportation Map </title>
 <link rel="stylesheet" href="css/historical_map.css">
 <link rel="stylesheet" href="libs/nouislider.css">
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="libs/jquery-1.12.4.min.js"></script>
 <script src="libs/lodash.js"></script>
 <script src="libs/nouislider.js"></script>
 <script src="libs/d3.min.js"></script>
