Template HTML file for generating map.html.

--- a/html/map_template.html
+++ b/html/map_template.html
@@ -19,7 +19,7 @@
 <div id="outer_container">
 <div id="inner_container">
 <div id="svg_container">
-<!-- #include "svg/Timeline_Base_Map-Master-Inline-Style.svg" -->
+<!-- #include(svg/Timeline_Base_Map-Master-Inline-Style.svg) -->
 </div> <!-- svg_container -->
 <div id="slider-vertical">
 </div>
