MANUALLY created index.html file for 'animated' version of app.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </div>
 </div>
 <div id="outer_container">
+
 <div id="inner_container">
 <div id="svg_container">
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1019.21 924.84">
@@ -2337,8 +2338,13 @@
   </g>
 </svg>
 </div> <!-- svg_container -->
-<div id="slider-vertical">
-</div>
+	<div id="inner_container_right">
+		<div id="button_div">
+			<input type="button" id="play_button" value="Play"/>
+		</div>
+		<div id="slider-vertical">
+		</div>
+	</div> <!-- innter_container_right -->
 </div> <!-- inner_container -->
 <div id="output">
 </div>
