Reflects use of new HTML template.

--- a/index_without_inset.html
+++ b/index_without_inset.html
@@ -2223,8 +2223,13 @@
   </g>
 </svg>
 </div> <!-- svg_container -->
-<div id="slider-vertical">
-</div>
+	<div id="inner_container_right">
+		<div id="button_div">
+			<input type="button" id="play_button" value="Play"/>
+		</div>
+		<div id="slider-vertical">
+		</div>
+	</div> <!-- innter_container_right -->
 </div> <!-- inner_container -->
 <div id="output">
 </div>
