--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 	</div> <!-- innter_container_right -->
 </div> <!-- inner_container -->
 <div id="output">
+	<div id="output_header">
+		<div id="output_year" class="year_header"></div>
+		<div id="download_button_div">
+			<input type="button" id="download_button" value="Download poster">
+		</div>
+	</div>
+	<div id="output_body">
+	</div>
 </div>
 </div> <!-- outer_container -->
 <script src="js/historical_map.js"></script>
