Added tags to enable PDF download. Like the previous version, this one was edited manually during development, rather than created from the template. The latter is TBD.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 	<div id="output_header">
 		<div id="output_year" class="year_header"></div>
 		<div id="download_button_div">
-			<input type="button" id="download_button" value="Download poster">
+			<a href="pdf/Time_Line_Map.pdf" download="Time_Line_Map">
+			    <input type="button" id="download_button" value="Download poster">
+			</a>
 		</div>
 	</div>
 	<div id="output_body">
