--- a/html/index_without_inset_template.html
+++ b/html/index_without_inset_template.html
@@ -35,6 +35,16 @@
 	</div> <!-- innter_container_right -->
 </div> <!-- inner_container -->
 <div id="output">
+	<div id="output_header">
+		<div id="output_year" class="year_header"></div>
+		<div id="download_button_div">
+			<a href="pdf/Time_Line_Map.pdf" download="Time_Line_Map">
+			    <input type="button" id="download_button" value="Download poster">
+			</a>
+		</div>
+	</div>
+	<div id="output_body">
+	</div>
 </div>
 </div> <!-- outer_container -->
 <script src="js/historical_map.js"></script>
