--- a/html/index_without_inset_template.html
+++ b/html/index_without_inset_template.html
@@ -10,6 +10,21 @@
 <script src="libs/lodash.js"></script>
 <script src="libs/nouislider.js"></script>
 <script src="libs/d3.min.js"></script>
+<script>
+(function(i,s,o,g,r,a,m){
+    i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();
+    a=s.createElement(o),m=s.getElementsByTagName(o)[0];
+    a.async=1;
+    a.src=g;
+    m.parentNode.insertBefore(a,m)})(window,
+                                     document,
+                                     "script",
+                                     "https://www.google-analytics.com/analytics.js",
+                                     "ga");
+    ga("create", "UA-39489988-1", {"cookieDomain":"auto"});
+    ga("set", "anonymizeIp", true);
+    ga("send", "pageview");
+</script>
 </head>
 <body>
 <div class="ctpsHeader">
