Reflects change to name of PDF file containing downloadable poster.

--- a/html/index_with_inset_template.html
+++ b/html/index_with_inset_template.html
@@ -53,7 +53,7 @@
 	<div id="output_header">
 		<div id="output_year" class="year_header"></div>
 		<div id="download_button_div">
-			<a href="pdf/Time_Line_Map.pdf" download="Time_Line_Map">
+			<a href="pdf/Time_Line_Map-Final.pdf" download="Time_Line_Map">
 			    <input type="button" id="download_button" value="Download poster">
 			</a>
 		</div>
