--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TVRXRVW1YN"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag("set", "developer_id.dMDhkMT", true);
+    gtag("config", "G-TVRXRVW1YN", {"groups":"default","page_placeholder":"PLACEHOLDER_page_location","allow_ad_personalization_signals":false});
+    gtag("config", "UA-39489988-1", {"groups":"default","page_placeholder":"PLACEHOLDER_page_path","allow_ad_personalization_signals":false,"anonymize_ip":true});
+</script>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Historical Transportation Map</title>
@@ -10,14 +19,6 @@
 <script src="libs/lodash.js"></script>
 <script src="libs/nouislider.js"></script>
 <script src="libs/d3.min.js"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag("set", "developer_id.dMDhkMT", true);
-    gtag("config", "G-TVRXRVW1YN", {"groups":"default","page_placeholder":"PLACEHOLDER_page_location","allow_ad_personalization_signals":false});
-    gtag("config", "UA-39489988-1", {"groups":"default","page_placeholder":"PLACEHOLDER_page_path","allow_ad_personalization_signals":false,"anonymize_ip":true});
-</script>
 </head>
 <body>
 <div class="ctpsHeader">
